# python-ddd-sandbox

./: .coveragerc  .dockerignore  .env.development  .env.test  .flake8  .gitignore  .importlinter  Dockerfile  LICENSE  Makefile  README.md  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: main.yaml  test.yaml
app/: __init__.py  anys.py  base_schema.py  base_schema_test.py  config.py  conftest.py  main.py  seed.py  utc_datetime.py
app/command/: __init__.py  event_handlers.py
app/common/: base_aggregate.py  base_entity.py  base_repository.py  base_schema.py  message_bus.py  message_bus_test.py  utils.py  utils_test.py
app/infrastructure/: base_query.py  base_sql_query_handler.py  containers.py  db.py  factories.py  message_bus_test.py  seed.py  session.py  tables.py  type_decorators.py  types.py
app/modules/: __init__.py  app.py  authentication_contract.py  bootstrap.py  errors_handling.py  errors_handling_test.py  event_handlers.py  message_bus.py
app/query/: app.py  conftest.py  dependencies.py  factories.py  schemas.py
app/query_service/: app.py  conftest.py  errors.py
app/sandbox/: command_bus.py  command_bus_test.py
app/services/: app.py  bootstrap.py  message_bus.py
app/shared/: base_aggregate.py  base_entity.py  base_schema.py  base_unit_of_work.py  base_value_object.py  dependencies.py  email_address.py  email_address_field.py  email_address_test.py  message_bus.py  message_bus_test.py  query.py  str_utils_test.py  user_id_field.py  utils_test.py
app/shared_kernel/: aggregate_root.py  base_aggregate.py  base_schema.py  base_schema_test.py  base_unit_of_work.py  entity.py  errors.py  message_bus_test.py  user_id.py  utils.py  utils_test.py
doc/adr/: 0001-record-architecture-decisions.md  0002-abandon-dataclasses-to-enhance-entity-hermetization.md
examples/: generics.py  inheritance.py  protocol.py  user.py
examples/inversion_of_control_1/: main.py
examples/inversion_of_control_2/: main.py
examples/inversion_of_control_3/: main.py
tests/: README.md  conftest.py  test_create_project.py  test_create_project_endpoint.py  test_project_tasks_endpoints.py  test_register_user_endpoint.py  test_task_endpoints.py
todos/: config.py  conftest.py  main.py  seed.py  services.py  services_test.py  utils_test.py
todos/api/: routes.py  (+4 more)
(+745 files in other folders)
