[project]
name = "python-ddd-sandbox"
version = "0.1.0"
description = "Python Clean Architecture and Domain Driven Development sandbox app"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite",
    "bcrypt",
    "dependency-injector>=4.49.0",
    "fastapi>=0.115.0",
    "pydantic[email]",
    "pydantic-settings",
    "pyjwt",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]",
    "typer",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "adr-tools-python",
    "freezegun",
    "httpx",
    "libyear",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-icdiff",
    "pytest-watch",
    "ruff",
    "ty",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [".venv", "htmlcov", "examples"]

[tool.ruff.lint]
# Carried over from the flake8 stack: E/W/F (flake8 core), S (bandit), B (bugbear),
# A (builtins), C4 (comprehensions), DTZ (datetimez), T10 (debugger), PT (pytest-style),
# PTH (use-pathlib), TRY (tryceratops), I (isort), TID (banned relative imports).
select = ["E", "W", "F", "S", "B", "A", "C4", "DTZ", "T10", "PT", "PTH", "TRY", "I", "TID"]
# A002/A003 (shadowing builtins), B008 (FastAPI Depends() in defaults), PT016, S105/S106
# (hardcoded passwords). W503/E704 are dropped — the formatter owns line breaks.
# TRY003 (long messages outside the exception class) is dropped — it is the noisiest
# tryceratops rule and was never enforced (tryceratops was not wired into the old lint).
ignore = ["A002", "A003", "B008", "PT016", "S105", "S106", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["S101"]
"test_*.py" = ["S101"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
# Ruff's isort defaults already match the black profile (vertical-hanging-indent,
# trailing comma, parentheses); kept explicit for parity with the old isort config.
known-first-party = ["app", "tests"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
# The done-bar is a passing check over app/ (design.md). examples/ is scratch using
# deprecated pydantic-v1 APIs and is never tested, so it is excluded.
include = ["app"]
exclude = ["examples", ".venv"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
